@@ -6,6 +6,7 @@ Version 1.3.0, xxxx, 2013 -- Release 1.3
 - Added class buildingspy.development.validator
   that can be used to validate the html syntax
   of the info section of .mo files.
+- Added validation of html syntax to unit test script.
 
 Version 1.2.0, May 15, 2013 -- Release 1.2
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
